# nse-am

./: .gitignore  README.md  main.py  pyproject.toml
configs/: nseva.default.yaml  symbols.example.yaml
data/: README.md
src/: __init__.py
src/nseva/: __init__.py  cli.py  version.py
src/nseva/config/: __init__.py  loader.py  models.py
src/nseva/excel/: __init__.py  writer_futures.py
src/nseva/gold/: __init__.py  futures_day.py  futures_summary.py  rollover.py
src/nseva/io/: __init__.py  cache.py  fetcher.py
src/nseva/parse/: __init__.py  mwpl.py  udiff.py
src/nseva/services/: __init__.py  calendar.py  expiry_service.py  lot_size.py
src/nseva/silver/: __init__.py  writer.py
src/nseva/util/: __init__.py  hashing.py  logging.py  manifest.py  paths.py  retry.py  typing.py
templates/: futures_template.xlsx  putcall_template.xlsx
tests/: __init__.py  helpers.py
tests/acceptance/: __init__.py  test_excel_output.py
tests/integration/: __init__.py  test_cli_run.py
tests/unit/: __init__.py  test_calendar_expiry.py  test_config_loader.py  test_fetcher.py  test_futures_day_gold.py  test_futures_summary.py  test_logging_manifest.py  test_mwpl_parser.py  test_udiff_parser.py
