[project]
name = "nse-am"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "pydantic>=2.5,<3",
    "PyYAML>=6.0",
    "pandas>=2.1,<3",
    "pyarrow>=18,<19",
    "openpyxl>=3.1,<4",
    "typer>=0.12,<0.13",
    "click>=8.1,<8.2",
    "requests>=2.31,<3",
    "python-dateutil>=2.8,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
]
